# MotecLogGenerator

./: .gitignore  README.md  cancsvtolog.py  data_log.py  motec_log.py  motec_log_generator.py  motec_log_gui.py  pyproject.toml
.github/workflows/: buildexe.yaml
