[project]
name = "motecloggenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cantools>=40.2.3",
  "csvkit>=2.1.0",
  "foxglove-schemas-protobuf>=0.3.0",
  "ldparser",
  "mcap>=1.3.0",
  "mcap-protobuf-support>=0.5.3",
  "protobuf>=6.31.1",
  "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "imageio>=2.37.0",
    "nuitka>=2.7.10",
]

[tool.uv.sources]
ldparser = { git = "https://github.com/mathbrook/ldparser.git" }
